# motoman_robotiq_grasping

./: .clang-format  .gitignore  .gitmodules  README.md  docker_run.bash  requirements.txt
coordinator/: CMakeLists.txt  package.xml
coordinator/action/: AutoGrasp.action  PredefinedMotion.action
coordinator/include/coordinator/: coordinator.h  motion_cmd_parser.h  status_stamped.h
coordinator/launch/: bringup_coordinator.launch  bringup_system.launch
coordinator/repository/: README.md
coordinator/src/: coordinator.cpp  motion_cmd_parser.cpp  node_coordinator.cpp  status_stamped.cpp
coordinator/srv/: AutoGrasping.srv  AutoOperation.srv  PredefinedMotionApi.srv  TagStatusApi.srv
detection/: CMakeLists.txt  package.xml  setup.py
detection/launch/: bringup_detection.launch
detection/msg/: DetectionResult.msg
detection/scripts/: node_detection.py  node_detection_3d.py  node_detection_grconv.py  node_gn1b_minimal.py
detection/scripts/caches/: scene.pcd
detection/scripts/helper/: common_utils.py  constants.py  node_utils.py  pointcloud_utils.py  transform_utils.py  vis_utils.py
detection/src/gn1b_minimal/: __init__.py  procedure.py
detection/src/gn1b_minimal/libs/: __init__.py  collision_detector.py  data_utils.py  knn_modules.py  label_generation.py
detection/src/gn1b_minimal/libs/model/: __init__.py  backbone.py  graspnet.py  loss_utils.py  modules.py
detection/src/inference/: __init__.py  evaluation.py  grasp_repr.py  grasp_utils.py  infer_tools.py  key_constants_pool.py  network.py  pipeline.py  realsense.py  se_layer.py  utils.py
detection/src/inference/ckpt/: README.md
detection/src/inference_3d/: __init__.py  depth_map_utils.py  geometry_utils.py  pipeline.py  utils.py
detection/src/inference_3d/models/: __init__.py  model_utils.py  pn2_graspness_net.py  pointnet2_backbone.py  pointnet2_ssg_cls.py  pointnet2_ssg_sem.py  pointnet2_utils.py  pointnet_sem_seg.py  pointnet_utils.py
detection/src/inference_grconv/: __init__.py  pipeline.py
detection/src/inference_grconv/models/: __init__.py  grasp_model.py  grconvnet.py  grconvnet3.py  grconvnet4.py
detection/src/inference_grconv/utils/: camera_data.py
detection/src/inference_grconv/utils/dataset_processing/: __init__.py  evaluation.py  grasp.py  image.py
detection/srv/: Detection3dService.srv
easy_aruco/: CMakeLists.txt
easy_aruco/launch/: track_charuco_board.launch
easy_aruco/src/: Detector.cpp
easy_handeye/easy_handeye/launch/: bringup_calibrate.launch  bringup_calibrate_process.launch
easy_handeye/easy_handeye/scripts/: publish.py
ma2010_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ma2010_robotiq_moveit_config/config/: controllers.yaml  ma2010_robotiq140.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
ma2010_robotiq_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ma2010_robotiq140_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ma2010_server/: CMakeLists.txt  package.xml
ma2010_server/include/configor/: LICENSE
ma2010_server/include/ma2010_server/: ma2010_reqres.h  ma2010_server_core.h
ma2010_server/launch/: bringup_ma2010_server.launch
ma2010_server/src/: ma2010_server_core.cpp  node_ma2010_server.cpp
ma2010_server/srv/: MA2010Service.srv
motoman/motoman_driver/launch/: robot_interface_streaming_dx200.launch
motoman/motoman_driver/src/industrial_robot_client/: joint_trajectory_interface.cpp
motoman/motoman_ma2010_moveit_config/launch/: moveit_planning_execution.launch
motoman/motoman_ma2010_support/launch/: robot_interface_streaming_ma2010.launch  robot_state_visualize_ma2010.launch
motoman/motoman_ma2010_support/urdf/: ma2010_macro.xacro  ma2010_with_robotiq140.xacro
motoman_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
motoman_robotiq_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ma2010_robotiq140.srdf  ompl_planning.yaml  ros_controllers.yaml
motoman_robotiq_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ma2010_robotiq140_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robotiq/gripper_server/: CMakeLists.txt  package.xml  setup.py
robotiq/gripper_server/include/gripper_server/: gripper_reqres.h
robotiq/gripper_server/launch/: bringup_gripper_server.launch  bringup_gripper_server_daemon.launch
robotiq/gripper_server/scripts/: node_gripper_server.py  node_gripper_server_daemon.py  start_gripper_server.sh
robotiq/gripper_server/src/gripper_core/: __init__.py  gripper_server.py  req_res_code.py
robotiq/gripper_server/srv/: GripperService.srv
robotiq/robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f_140_model_macro.xacro
robotiq/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch  test_140mm_gripper.launch
robotiq/robotiq_2f_gripper_control/scripts/: robotiq_2f_action_client_example.py  robotiq_2f_action_server.py
robotiq/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: robotiq_2f_gripper_driver.py
robotiq/robotiq_modbus_rtu/src/robotiq_modbus_rtu/: comModbusRtu.py
scripts/: run_detection.bash  run_gripper.bash  run_ma2010.bash
